Refactoring of main.tex, adding comments etc..

--- a/Español/estilopseudo.tex
+++ b/Español/estilopseudo.tex
@@ -1,3 +1,7 @@
+% Colores
+\definecolor{azulpseudo}{HTML}{1919FF}
+\definecolor{secnaranja}{HTML}{FFA500}
+\definecolor{ccomentarios}{HTML}{009900}
 
 \lstdefinelanguage{pseudocodigoesp}
                   {
