--- a/Español/main.tex
+++ b/Español/main.tex
@@ -1,48 +1,57 @@
 \documentclass{article}
-\usepackage{multicol}
+
+% Carga de paquetes.
 \usepackage{amsfonts}
-
 \usepackage{polyglossia}
-\setmainlanguage{spanish}
-
-
-
 \usepackage{fancyhdr}
-\renewcommand{\headrulewidth}{0.4pt}
-\renewcommand{\footrulewidth}{0.4pt}
-\rhead{\small\emph{\nouppercase{\rightmark}}}
-\lhead{\small\emph{\nouppercase{\leftmark}}}
 \usepackage[titletoc]{appendix}
 \usepackage[dvipsnames]{xcolor}
 \usepackage[a4paper,width=130mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage[hang,flushmargin]{footmisc}
 \usepackage{listings}
-\definecolor{azulpseudo}{HTML}{1919FF}
-\definecolor{secnaranja}{HTML}{FFA500}
-\definecolor{ccomentarios}{HTML}{009900}
-\newcommand{\pkeyword}[1]{\textcolor{azulpseudo}{\texttt{\textbf{#1}}}}
+\usepackage[bookmarksopen=true]{hyperref}
+
+% Opciones de los paquetes.
+\setmainlanguage{spanish}
+
+\renewcommand{\headrulewidth}{0.4pt}
+\renewcommand{\footrulewidth}{0.4pt}
+\rhead{\small\emph{\nouppercase{\rightmark}}}
+\lhead{\small\emph{\nouppercase{\leftmark}}}
+
+
 \input{estilopseudo.tex}
+
+% Comandos personalizados.
+\input{comandos.tex}
+
 %Opciones generales del documento
+
 \setlength\parindent{0pt}
 \setlength\parskip{5pt}
-\usepackage{mflogo}
-\usepackage[bookmarksopen=true]{hyperref}
+
+% Datos generales del documento.
 
 \title{Resumen Pseudocódigo}
 \author{Antonio Vélez Estévez}
-\date{Julio 2016}
+\date{\today\\\vspace{2em}Versión 1.0}
 \pagestyle{fancy}
+
+
 \begin{document}
-
 \maketitle
-
-
 \begin{abstract}
-Este documento es un pequeño manual-resumen del pseudocódigo usado en la asignatura de Introducción a la Programación en la Universidad de Cádiz.
+  
+  Este documento es un pequeño manual-resumen del pseudocódigo usado en la asignatura de Introducción a la Programación en la Universidad de Cádiz.
+  
 \end{abstract}
+
 \tableofcontents
+
 \pagebreak
+
 \section{Vista general}
+
 La estructura general de un algoritmo en pseudocódigo es la siguiente:
 
 \begin{lstlisting}[language=pseudocodigoesp]
@@ -68,19 +77,25 @@ fin_algoritmo
 \end{lstlisting}
 
 \section{Tipos de datos}
+
 En pseudocódigo disponemos de los tipos de datos simples y estructurados para diseñar nuestros programas.
+
 \subsection{Simples}
+
 \subsubsection{Numéricos}
-\paragraph{Enteros} es un subconjunto finito de los enteros ($\mathbb{Z}$), el rango disponible es: $$\left[-32768, 32768\right]$$
+
+\paragraph{Enteros}
+es un subconjunto finito de los enteros ($\mathbb{Z}$), el rango disponible es: $$\left[-32768, 32768\right]$$
 
 Para declarar una variable de tipo entero en pseudocódigo usaremos la palabra reservada \pkeyword{entero}.
 
-\paragraph{Reales} es un subconjunto finito de los reales ($\mathbb{R}$), el rango disponible es: $$\left[ 1,17549\times 10^{-38}, 3,40282\times 10^{38} \right]$$
-
+\paragraph{Reales}
+es un subconjunto finito de los reales ($\mathbb{R}$), el rango disponible es: $$\left[ 1,17549\times 10^{-38}, 3,40282\times 10^{38} \right]$$
 
 Para declarar una variable de tipo real en pseudocódigo usaremos la palabra reservada \pkeyword{real}.
 
 \subsubsection{Lógicos}
+
 Este tipo de dato solo puede tener dos valores \textbf{verdadero} o \textbf{falso}, sobre él se pueden aplicar los operadores del algebra booleana
 \footnote{Conjunción, disyunción, negación y disyunción excluyente (habitualmente conocida como \textbf{XOR} de ``eXclusive OR'' ).}.
 
@@ -94,8 +109,11 @@ Puede representar los carácteres alfanuméricos especificados en el código ASC
 Para declarar una variable de tipo carácter en pseudocódigo usaremos la palabra reservada \pkeyword{caracter}.
 
 \subsection{Estructurados}
+
 Los tipos de datos estructurados se definirán en la sección de definición de tipos, que está encabezada por la palabra reservada \pkeyword{tipos}.
+
 \subsubsection{Vectores}
+
 Un vector es un conjunto finito de elementos \textit{del mismo tipo}, que están almacenados consecutivamente y que pueden ser identificados de forma independiente.
 
 Para definir un vector en la sección de tipos usaremos la siguiente sintaxis:
@@ -107,17 +125,23 @@ vector [tamaño] de <tipo_dato> : <identificador_tipo_vector>
 Luego usaremos ese identificador para declarar el tipo de una variable.
 
 \textbf{Nota\footnote{En Vary debido a temas de diseño los vectores empiezan en la posición 0 al igual que en el lenguaje C.}:} los vectores en pseudocódigo empiezan en la posición 1.
+
 \subsubsection{Matrices}
+
 Una matriz multidimensional es una estructura homogénea, en la cual para hacer referencia a un elemento necesitamos dos o más índices dependiendo de su dimensión.
 
 Para definir una matriz en la sección de tipos usaremos la siguiente sintaxis:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 matriz [tam1, ..., tamN] de <tipo_dato> : <identificador_tipo_matriz>
 \end{lstlisting}
 
 Para declarar una variable de dicho tipo usaremos el identificador que establezcamos.
+
 \subsubsection{Cadenas de caracteres}
+
 Una cadena de caracteres es una secuencia de caracteres consecutivos. Para declarar una variable como cadena debemos usar la palabra clave \pkeyword{cadena}.
+
 \begin{itemize}
 \item Se puede asignar a una variable de tipo \pkeyword{cadena} una constante de cadena.
 \item Se pueden usar las operaciones de lectura y escritura con cadenas de caracteres.
@@ -127,6 +151,7 @@ Una cadena de caracteres es una secuencia de caracteres consecutivos. Para decla
 \end{itemize}
 
 \subsubsection{Registros}
+
 Es una estructura de datos formada por un conjunto de elementos que contienen información relativa a algo. Los elementos que constituyen un \pkeyword{registro} se denominan \emph{campos} y cada campo puede ser de un tipo diferente.
 \pagebreak
 
@@ -146,17 +171,23 @@ Consideraciones:
 \begin{itemize}
 \item Se puede realizar la asignación entre dos registros completos siempre que sean del mismo tipo.
 \end{itemize}
+
 \subsubsection{Ficheros}
+
 Para definir un tipo de \pkeyword{fichero} en la sección de tipos usaremos la siguiente sintaxis:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 archivo de tipo_dato : tipoFichero
 \end{lstlisting}
 
 Para abrir un fichero usaremos la funcion \pkeyword{abrir}() que asocia una variable de tipo fichero con un archivo. El formato de dicha función es el siguiente:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 abrir(varFichero, modo, nombreFichero)
 \end{lstlisting}
+
 Donde:
+
 \begin{itemize}
 \item\textbf{\texttt{varFichero}} es la variable, declarada previamente a la que se le asociará el fichero físico.
 \item\textbf{\texttt{modo}} indica el modo de acceso al fichero(escritura o lectura).
@@ -171,8 +202,12 @@ Para el manejo de ficheros disponemos de cuatro operaciones:
 \item \pkeyword{feof}\texttt{(varFichero)}.
 \item \pkeyword{cerrar}\texttt{(varFichero)}.
 \end{itemize}
+
 \subsubsection{Enumerados}
-El uso de tipos enumerados permite mejorar la legibilidad de los algoritmos y reducir posibles errores. Para definir un tipo enumerado usaremos la siguiente sintaxis en la sección de tipos:
+
+El uso de tipos enumerados permite mejorar la legibilidad de los algoritmos y reducir posibles errores. Para definir un tipo enumerado usaremos la siguiente sintaxis en la s
+ección de tipos:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 identificador_tipo_enumerado = {elemento1, ..., elementoN}
 \end{lstlisting}
@@ -181,32 +216,42 @@ Luego para declarar una variable como este tipo enumerado usaremos dicho identif
 
 \subsubsection{Subrango}
 Contiene un rango de valores de otro tipo existente, sea predefinido o definido por el usuario. Para definir un subrango usaremos la siguiente sintaxis en la sección de tipos:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 identificador_tipo_subrango = limInf .. limSup
 \end{lstlisting}
 
 Para declarar una variable como este tipo subrango usaremos dicho identificador.
+
 \section{Variables, constantes y expresiones}
 Una \textbf{variable} es un objeto que contiene un valor que puede variar durante la ejecución del programa, mientras que una \textbf{constante} también es un objeto que contiene un valor, pero que, a diferencia de una variable, su valor no cambia.
 
 Para usar una variable primero tenemos que declararla, esto es, asociar un tipo con la misma. En pseudocódigo esto se hace en la sección \pkeyword{var} de la siguiente forma:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 identificador_del_tipo : identificador_de_la_variable
 \end{lstlisting}
 
 Para usar una constante primero tenemos que definirla, esto es darle un valor. En pseudocódigo esto se hace en la sección \pkeyword{const} de la siguiente forma:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 identificador_de_la_constante = valor_de_la_constante
 \end{lstlisting}
+
 \subsection{Asignación}
+
 Se utiliza para darle valor a una variable y se representa por $\leftarrow$, el formato es:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 identificador_de_variable <- expresión
 \end{lstlisting}
 
 Esta operación es destructiva, el valor que tenía antes la variable desaparece.
+
 \subsection{Expresiones aritméticas}
+
 Las expresiones aritméticas que se pueden realizar vienen resumidas en la siguiente tabla:
+
 \begin{center}
   \begin{tabular}{| c | l | c | l}
     + & Suma & \texttt{|} & OR a nivel de bits\\[8pt]
@@ -217,6 +262,7 @@ Las expresiones aritméticas que se pueden realizar vienen resumidas en la sigui
   \end{tabular} 
 \end{center}
 \subsection{Expresiones lógicas}
+
 Las expresiones lógicas que se pueden realizar vienen resumidas den la siguiente tabla:
 
 \begin{center}
@@ -234,18 +280,25 @@ Las expresiones lógicas que se pueden realizar vienen resumidas den la siguient
 \end{center}
 
 \section{Estructuras de control}
+
 \subsection{Selectivas}
+
 Permiten decidir entre varios bloques de código en base a una condición.
+
 \subsubsection{Simple}
+
 La estructura general de esta estructura selectiva es:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 si (condición) entonces
     // Bloque que se ejecuta únicamente si la condición
     // es verdadera.
 fin_si
 \end{lstlisting}
+
 \subsubsection{Doble}
 La estructura general de esta estructura selectiva es:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 si (condición) entonces
     // Bloque que se ejecuta únicamente si la condición
@@ -255,8 +308,11 @@ si_no
     // es falsa.
 fin_si
 \end{lstlisting}
+
 \subsubsection{Múltiple}
+
 La estructura general de esta estructura selectiva es:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 segun_sea (expresión) hacer
     1:
@@ -272,21 +328,28 @@ segun_sea (expresión) hacer
         // Bloque de código en un caso contrario a los anteriores.
 fin_segun
 \end{lstlisting}
+
 \subsection{Repetitivas}
+
 Permiten repetir una o varias instrucciones varias veces en función
 de la evaluación de una determinada condición. A las estructuras repetitivas
 se les denomina \emph{bucles}, y se llama \emph{iteración} a cada repetición de la
 ejecución de la secuencia de instrucciones que forman el llamado
 \emph{cuerpo del bucle}. 
+
 \subsubsection{Mientras}
+
 La plantilla de esta estructura repetitiva es:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 mientras (condición) hacer
     // cuerpo del bucle
 fin_mientras
 \end{lstlisting}
+
 \subsubsection{Repetir}
 La plantilla de esta estructura repetitiva es:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 repetir
     // cuerpo del bucle
@@ -294,8 +357,11 @@ hasta_que (condición)
 \end{lstlisting}
 
 Esta estructura tiene una peculiaridad, \textbf{se ejecuta mientras la condición se evalúa como falsa}, cuando es verdadera termina su ejecución.
+
 \subsubsection{Desde}
+
 La plantilla de esta estructura repetitiva es:
+
 \begin{lstlisting}[language = pseudocodigoesp, mathescape=true]
 desde i <- $V_i$ hasta $V_f$ hacer
     // cuerpo del bucle
@@ -313,8 +379,11 @@ fin_desde
 Siendo \texttt{n} el valor en el que se quiere incrementar o decrementar \texttt{i} en cada iteración.
 
 \section{Subalgoritmos}
+
 \subsection{Funciones}
+
 Para declarar funciones en pseudocódigo usaremos la siguiente plantilla:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 <especificación_de_la_función>
 <tipo_del_resultado> funcion <nombre_función> (<lista_de_parámetros_formales>)
@@ -326,15 +395,20 @@ Para declarar funciones en pseudocódigo usaremos la siguiente plantilla:
     devolver (<expresión_resultado>)
 fin_funcion
 \end{lstlisting}
+
 Donde:
+
 \begin{itemize}
 \item \texttt{lista\_de\_parámetros\_formales} es una lista de la siguiente forma:\linebreak\newline\texttt{(\pkeyword{\{E|S|E/S\} tipo1}: param1,{\color{red}...}, \pkeyword{\{E|S|E/S\} tipoN}: paramN)}
   \begin{itemize} 
     \item El significado de \pkeyword{E}, \pkeyword{S} y \pkeyword{E/S} se detallará en \ref{subsec:pvr}\nameref{subsec:pvr}.
     \end{itemize}
 \end{itemize}
+
 \pagebreak
+
 \subsection{Procedimientos}
+
 Para declarar procedimientos en pseudocódigo usaremos la siguiente plantilla:
 \begin{lstlisting}[language = pseudocodigoesp]
 <especificación_del_procedimiento>
@@ -346,12 +420,16 @@ procedimiento <nombre_procedimiento> (<lista_de_parámetros_formales>)
     // cuerpo del procedimiento.
 fin_procedimiento
 \end{lstlisting}
+
 La lista de parámetros formales sigue la misma forma que en la sección anterior. Se puede observar como no hay \pkeyword{devolver}, ya que los procedimientos no devuelven nada.
+
 \subsection{Paso por valor y por referencia}
 \label{subsec:pvr}
+
 En el paso por valor se produce una copia del valor de los parámetros actuales en los parámetros formales. Este tipo de parámetros siempre será de entrada y llevarán en su declaración una \pkeyword{E}.
 
 En el paso por referencia tenemos dos casos, en ambos el parámetro formal recibe una referencia del parámetro actual:
+
 \begin{itemize}
 \item \textbf{Salida} en este tipo solo podemos usar el parámetro formal en un valor izquierdo, es decir, en la parte izquierda de las asignaciones. Se declara poniendo \pkeyword{S}.
 \item \textbf{Entrada/Salida} en este tipo podemos usar el parámetro formal tanto en un valor izquierdo como en uno derecho, es decir podemos usar su valor para calcular cualquier cosa y también podemos guardar valores en el mismo. Se declara poniendo \pkeyword{E/S}.
@@ -360,7 +438,9 @@ En el paso por referencia tenemos dos casos, en ambos el parámetro formal recib
 En el paso por valor los parámetros actuales \textbf{\textit{no se modifican}} mientras que en el paso por referencia \textbf{\textit{pueden modificarse}}.
 
 \section{Ámbito de las variables}
+
 En pseudocódigo tenemos dos tipos de ámbito:
+
 \begin{itemize}
 \item \textbf{Global}. Las variables son accesibles y visibles en el resto del código.
 \item \textbf{Local}. Las variables locales son accesibles y visibles solamente en el bloque en el que se definen.
@@ -371,24 +451,29 @@ Para declarar una variable \textbf{global} en pseudocódigo debemos escribirla e
 Para declarar una variable \textbf{local} a un bloque en pseudocódigo debemos escribirla en la sección \pkeyword{var} de dicho bloque.
 
 \section{Funciones y procedimientos como parámetros}
+
 Para pasar funciones o procedimientos como parámetros primero debemos declarar un tipo que sea dicha función o procedimiento siguiendo la siguiente sintaxis:
 
 Para funciones:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 [tipo_resultado] funcion (<lista_parametros_formales>) : id
 \end{lstlisting}
 
 Para procedimientos:
+
 \begin{lstlisting}[language = pseudocodigoesp]
 procedimiento (<lista_parametros_formales>) : id
 \end{lstlisting}
 
 Luego se usa dicho tipo como un tipo normal y corriente. Lo único especial que tienen las variables declaradas de este tipo es que pueden ser llamadas como una función.
+
 \pagebreak
+
 \begin{appendices}
-  \section{Consideraciones en Vary}
-  \pagebreak
+
   \section{Palabras reservadas}
+
   \pkeyword{
   \begin{tabular}{l l l l l }
     Algoritmo & fin\_algoritmo & inicio & var & tipo  \\[8pt]
@@ -402,10 +487,14 @@ Luego se usa dicho tipo como un tipo normal y corriente. Lo único especial que 
     abrir & cerrar & feof & const & tipos \\[8pt]
     y & o & no \\
   \end{tabular}  }
-   \pagebreak
-   \section{Ejemplos}
-   \subsection{Selectiva simple}
-\begin{lstlisting}[language = pseudocodigoesp]
+
+  \pagebreak
+
+  \section{Ejemplos}
+
+  \subsection{Selectiva simple}
+
+  \begin{lstlisting}[language = pseudocodigoesp]
 // Algoritmo: Ejemplo de estructura selectiva simple.
 // Autor: Antonio Vélez Estévez
 // Fecha: 23/04/2016
@@ -454,7 +543,8 @@ fin_principal
 fin_algoritmo
 
 \end{lstlisting}
-\subsection{Selectiva doble}
+
+  \subsection{Selectiva doble}
 \begin{lstlisting}[language = pseudocodigoesp]
 // Algoritmo: Ejemplo de estructura selectiva doble.
 // Autor: Antonio Vélez Estévez
