Pasando ejemplos de código a utf8 y modificando main.tex

--- a/Español/estilopseudo.tex
+++ b/Español/estilopseudo.tex
@@ -73,7 +73,7 @@
                       {logico:}{{$\texttt{\textcolor{blue}{logico:}}$}}6
                       {real:}{{$\texttt{\textcolor{blue}{real:}}$}}3
                       {caracter:}{{$\texttt{\textcolor{blue}{caracter:}}$}}8
-                      }
+                      {\ \ }{{\ }}1}
                       ,
                    morestring=[b]",
                    showstringspaces=false,
@@ -83,4 +83,6 @@
                     basicstyle = {\small\ttfamily},
                     keywordstyle = \color{blue}\textbf,
                     stringstyle = \ttfamily\color{ccomentarios},
+                    inputencoding = utf8,
+                    extendedchars = true,
                   }
