--- a/Español/main.tex
+++ b/Español/main.tex
@@ -143,7 +143,7 @@ Para declarar una variable de dicho tipo usaremos el identificador que establezc
 Una cadena de caracteres es una secuencia de caracteres consecutivos. Para declarar una variable como cadena debemos usar la palabra clave \pkeyword{cadena}.
 
 \begin{itemize}
-\item Se puede asignar a una variable de tipo \pkeyword{cadena} una constante de cadena.
+\item Se puede asignar a una variable de tipo \pkeyword{cadena} una constante de cadena o otra cadena usando \pkeyword{copiar}(\#1, \#2).
 \item Se pueden usar las operaciones de lectura y escritura con cadenas de caracteres.
 \item Podemos calcular la longitud de una cadena con \pkeyword{longitud}(\#1).
 \item Se pueden comparar cadenas con los operadores relacionales conocidos\footnote{menor-que(<), mayor-que(>), igual(=), menor o igual ($\leq$), mayor o igual ($\geq$) y distinto ($\neq$).}.
@@ -485,7 +485,7 @@ Luego se usa dicho tipo como un tipo normal y corriente. Lo único especial que 
     fin\_funcion & devolver & procedimiento & fin\_procedimiento & registro\\[8pt]
     fin\_registro & escribir & leer & archivo & concatena \\[8pt]
     abrir & cerrar & feof & const & tipos \\[8pt]
-    y & o & no \\
+    y & o & no & copiar \\
   \end{tabular}  }
 
   \pagebreak
@@ -493,757 +493,48 @@ Luego se usa dicho tipo como un tipo normal y corriente. Lo único especial que 
   \section{Ejemplos}
 
   \subsection{Selectiva simple}
-
-  \begin{lstlisting}[language = pseudocodigoesp]
-// Algoritmo: Ejemplo de estructura selectiva simple.
-// Autor: Antonio Vélez Estévez
-// Fecha: 23/04/2016
- 
-Algoritmo EstructurasSelectiva01
-
-//Sección de definición de variables constantes
-const 
-	
-//Sección de definición de tipos
-tipo
-
-//Sección de declaración de variables globales	
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-var
-	// Definimos la variable condición de tipo lógico, es decir tomará
-	// dos valores únicos, verdadero o falso.
-	logico : condicion
-inicio 	
-
-	// Asignamos a la variable condicion el valor verdadero.
-	condicion <- verdadero
-	
-	// Si el valor de la variable condición es verdadero, entonces
-	// se ejecutará el código que hay entre el entonces y el fin_si.
-	si (condicion = verdadero) entonces
-		escribir("La condicion era verdadera!")
-	fin_si
-	
-	// Asignamos a la variable condicion el valor falso.
-	condicion <- falso
-	
-	// Si el valor de la variable condición es verdadero(nunca pasará
-	// ya que acabamos de establecer la variable condicion a falso)
-	// , entonces se ejecutará el código que hay entre el entonces y el fin_si.
-	si (condicion = verdadero) entonces 
-		escribir("Esto nunca se escribira!")
-	fin_si
-fin_principal
-
-fin_algoritmo
-
-\end{lstlisting}
+  
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Selectiva/EstructurasSelectiva01.p"}
 
   \subsection{Selectiva doble}
-\begin{lstlisting}[language = pseudocodigoesp]
-// Algoritmo: Ejemplo de estructura selectiva doble.
-// Autor: Antonio Vélez Estévez
-// Fecha: 23/04/2016
-
-Algoritmo EstructuraSelectiva02
-
-//Sección de definición de variables constantes
-const 
-	
-//Sección de definición de tipos
-tipo
-
-//Sección de declaración de variables globales	
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-var
-	// Definimos la variable condición de tipo lógico, es decir tomará
-	// dos valores únicos, verdadero o falso.
-	logico : condicion
-inicio 	
-
-	// Asignamos a la variable condicion el valor verdadero.
-	condicion <- verdadero
-	
-	// Si el valor de la variable condición es verdadero, entonces
-	// se ejecutará el código que hay entre el entonces y el fin_si.
-	// Si el valor de la variable es falso, entonces se ejecutará,
-	// el código entre el si_no y el fin_si.
-	si (condicion = verdadero) entonces
-		escribir("La condicion era verdadera!")
-	si_no
-		escribir("Esto nunca se escribira!")
-	fin_si
-
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Selectiva múltiple}
-\begin{lstlisting}[language = pseudocodigoesp]
-// Algoritmo: Ejemplo de estructura selectiva múltiple.
-// Autor: Antonio Vélez Estévez
-// Fecha: 23/04/2016
- 
-Algoritmo EstructurasSelectiva03
-
-//Sección de definición de variables constantes
-const 
-	
-//Sección de definición de tipos
-tipo
-
-//Sección de declaración de variables globales	
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-var
-	// Definimos la variable condición de tipo entero, es decir tomará
-	// valores en dicho conjunto.
-	entero : numero
-inicio 	
-
-	// Le muestra al usuario el siguiente mensaje por la pantalla
-	escribir("Ingrese un numero de un solo digito: ")
-	// Lee un valor y lo guarda en la variable numero.
-	leer(numero)
-	
-	
-	// Segun sea el numero, en el caso de que sea uno, escribira
-	// Su numero es el uno.
-	segun_sea(numero) hacer
-		caso 1: escribir("Su numero es el uno.")
-		caso 2: escribir("Su numero es el dos.")
-		caso 3: escribir("Su numero es el tres.")
-		caso 4: escribir("Su numero es el cuatro.")
-		caso 5: escribir("Su numero es el cinco.")
-		caso 6: escribir("Su numero es el seis.")
-		caso 7: escribir("Su numero es el siete.")
-		caso 8: escribir("Su numero es el ocho.")
-		caso 9: escribir("Su numero es el nueve.")
-		caso 0: escribir("Su numero es el cero.")
-		en_otro_caso: escribir("No se cual es su numero, probablemente
-                haya introducido algo fuera del rango establecido.")
-	fin_segun
-
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Bucle mientras}
-\begin{lstlisting}[language = pseudocodigoesp]
-
-// Algoritmo: Ejemplo de la estructura repetitiva mientras.
-// Autor: Antonio Vélez Estévez
-// Fecha: 23/04/2016
-
- 
-Algoritmo EstructurasRepetitiva01
-
-//Sección de definición de variables constantes
-const 
-	
-//Sección de definición de tipos
-tipo
-
-//Sección de declaración de variables globales	
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-var
-	// Definimos la variable condición de tipo entero, es decir tomará
-	// valores en dicho conjunto.
-	entero : numero
-inicio 	
-	// Le muestra al usuario el siguiente mensaje por la pantalla
-	escribir("Ingrese un numero de un solo digito: ")
-	// Lee un valor y lo guarda en la variable numero.
-	leer(numero)
-	
-	// Le muestra al usuario el siguiente mensaje por la pantalla
-	escribir("Ahora le mostrare todos los numeros que hay desde el
-        numero que ha introducido hasta el 1000")
-	
-	// Ahora tenemos el número que ha introducido el usuario,
-	// imaginemos que es el 992, como el 992 es menor que el
-	// 1000, se ejecutará el cuerpo del mientras, se escribirá
-	// el numero 992, y se incrementará en uno la variable número.
-	
-	// La última iteración será cuando el valor de numero sea
-	// mil, mil es menor o igual que mil, así que entraríamos
-	// en el cuerpo del mientras, incrementaríamos en uno, y 
-	// tendríamos 1001, al intentar entrar otra vez en el bucle
-	// tenemos que comparar si 1001 es menor o igual que 1000,
-	// cosa que es falsa, así que se sale del bucle y termina.
-	mientras (numero <= 1000) hacer
-		escribir("Voy por el numero ", numero)
-		numero <- numero + 1
-	fin_mientras
-	
-
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Bucle repetir}
-\begin{lstlisting}[language = pseudocodigoesp]
-
-// Algoritmo: Ejemplo de la estructura repetitiva repetir. Algoritmo
-// para hacer un menu.
-// Autor: Antonio Vélez Estévez
-// Fecha: 23/04/2016
   
-Algoritmo EstructurasRepetitiva02
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Selectiva/EstructurasSelectiva02.p"}
 
-//Sección de definición de variables constantes
-const 
-	
-//Sección de definición de tipos
-tipo
+  \subsection{Selectiva múltiple}
 
-//Sección de declaración de variables globales	
-var
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Selectiva/EstructurasSelectiva03.p"}
 
-//Sección de definición de subalgoritmos: funciones y procedimientos	
+  \subsection{Bucle mientras}
 
-//Comienzo del algoritmo (Obligatorio)
-principal	
-var
-	// Definimos la variable opcion de tipo entero, es decir tomará
-	// valores en dicho conjunto.
-	entero : opcion
-inicio 	
-	// Esta estructura es muy útil para hacer menús
-	// porque al menos se repiten una vez, ya que no
-	// comprueban la condición al principio.
-	
-	repetir
-		escribir("Opcion 1: Volar.")
-		escribir("Opcion 2: Caminar.")
-		escribir("Opcion 3: Nadar.")
-		escribir("Opcion 4: Salir.")
-		escribir("\n Elija una: ")
-		leer(opcion)
-		// Seguirá repitiendo el cuerpo, hasta que opción sea cuatro.
-	hasta_que (opcion = 4)
-	
-	escribir("Usted ha decidido salir")
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Repetitiva/EstructurasRepetitiva01.p"}
 
-fin_principal
-fin_algoritmo
-  \end{lstlisting}
-\subsection{Bucle for}
-\begin{lstlisting}[language = pseudocodigoesp]
-// Algoritmo: Ejemplo de la estructura repetitiva desde.
-// Autor: Antonio Vélez Estévez
-// Fecha: 23/04/2016
- 
-Algoritmo EstructurasRepetitiva03
+  \subsection{Bucle repetir}
 
-//Sección de definición de variables constantes
-const 
-	
-//Sección de definición de tipos
-tipo
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Repetitiva/EstructurasRepetitiva02.p"}
 
-//Sección de declaración de variables globales	
-var
+  \subsection{Bucle desde}
 
-//Sección de definición de subalgoritmos: funciones y procedimientos	
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Repetitiva/EstructurasRepetitiva03.p"}
 
-//Comienzo del algoritmo (Obligatorio)
-principal	
-var
-	// Límite inferior del intervalo.
-	entero: limInf
-	// Límite superior del intervalo.
-	entero: limSup
-	// Variable de control del bucle.
-	entero: z
-	// Acumulador.
-	entero: acumulador
-inicio 	
-	// Inicializamos el acumulador a cero.
-	acumulador <- 0
-	
-	escribir("Introduzca el límite inferior del intervalo:")
-	leer(limInf)
-	escribir("\nIntroduzca el límite superior del intervalo")
-	leer(limSup)
-	
-	// Algoritmo para sumar todos los números
-	// en los límites del intervalo [i,j] que
-	// introduzca el usuario.
-	
-	desde z <- limInf hasta limSup hacer
-		acumulador <- acumulador + z
-	fin_desde
+  \subsection{Funciones}
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Repetitiva/EstructurasRepetitiva03.p"}
+  \subsubsection{Paso por valor}
 
-	escribir("El resultado de la suma es: ", acumulador)
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Funciones}
-\subsubsection{Paso por valor}
-\begin{lstlisting}[language = pseudocodigoesp, keepspaces]
-// Algoritmo: Ejemplo de funcion con paso por valor
-// Autor: Antonio Vélez Estévez
-// Fecha: 30/06/2016
- 
-Algoritmo FuncionesPasoValor01
 
-//Sección de definición de variables constantes
-const 
-//Sección de definición de tipos
-tipo
-//Sección de declaración de variables globales	
-var
+  \subsubsection{Paso por referencia}
+  \subsection{Procedimientos}
+  \subsubsection{Paso por valor}
 
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-real funcion elevar(E real: x, E real: n)
-var
-	entero: resultado
-	entero: i
-inicio
-	resultado <- 1
-	
-	// Si es igual a 0 pasaría del bloque de código y devolvería directamente
-        // el resultado.
-	si(n != 0) entonces
-		si(n > 0) entonces
-			desde i <- 1 hasta n hacer
-				resultado <- resultado * x
-			fin_desde
-		si_no
-			desde i <- 1 hasta -n hacer
-				resultado <- resultado / x
-			fin_desde
-		fin_si
-	fin_si
-	
-	devolver resultado
-fin_funcion
-//Comienzo del algoritmo (Obligatorio)
-principal	
+  \subsubsection{Paso por referencia}
 
-var
-         real: base
-        entero: exponente
-         real: resultado
-inicio 	
-	escribir("Introduzca un número: ")
-	leer(base)
-	
-	escribir("Introduzca un exponente: ")
-	leer(exponente)
 
-	escribir("El resultado de la potencia es:", elevar(base, exponente))
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsubsection{Paso por referencia}
-\begin{lstlisting}[language = pseudocodigoesp]
-// Algoritmo: Ejemplo de función con paso por referencia.
-// Realizar una función que dados los parámetros, vector por entrada y un real p
-// or referencia, devuelva la media de los elementos del vector y guarde en el s
-// egundo parámetro la suma de los elementos de dicho vector.
- 
-// Autor: Antonio Vélez Estévez
-// Fecha: 01/07/2016
- 
-Algoritmo FuncionesPasoReferencia01
 
-//Sección de definición de variables constantes
-const 
-	MAX = 30
-//Sección de definición de tipos
-tipo
-	vector [MAX] de entero: Vector
-//Sección de declaración de variables globales	
-var
+  \subsection{Registros}
 
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-real funcion operacionesVector(E Vector: vect, E/S real: suma)
-var
-	entero: i
-inicio
-	suma <- 0
 
-	desde i <- 0 hasta MAX - 1 hacer
-		suma <- suma + vect[i]
-	fin_desde
-	
-	devolver suma div MAX
-fin_funcion
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-
-var
-	entero: i
-	Vector: vect
-	real: media
-	real: suma
-inicio 	
-	desde i <- 0 hasta MAX - 1 hacer
-		vect[i] <- i
-	fin_desde
-	
-	media <- operacionesVector(vect, suma)
-	
-	escribir("La media es ", media)
-	escribir("La suma es", suma)
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Procedimientos}
-\subsubsection{Paso por valor}
-\begin{lstlisting}[language = pseudocodigoesp]
-  
-// Algoritmo: Ejemplo de procedimiento con paso por valor.
-// Autor: Antonio Vélez Estévez
-// Fecha: 30/06/2016
- 
-Algoritmo ProcedimientosPasoReferencia01
-
-//Sección de definición de variables constantes
-const 
-//Sección de definición de tipos
-tipo
-//Sección de declaración de variables globales	
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-procedimiento dimeNumero(E entero: x)
-
-inicio 
-
-	segun_sea(x) hacer
-		caso 1: escribir("Su numero es el uno.")
-		caso 2: escribir("Su numero es el dos.")
-		caso 3: escribir("Su numero es el tres.")
-		caso 4: escribir("Su numero es el cuatro.")
-		caso 5: escribir("Su numero es el cinco.")
-		caso 6: escribir("Su numero es el seis.")
-		caso 7: escribir("Su numero es el siete.")
-		caso 8: escribir("Su numero es el ocho.")
-		caso 9: escribir("Su numero es el nueve.")
-		caso 0: escribir("Su numero es el cero.")
-		en_otro_caso: escribir("No se cual es su numero, probablemente
-                haya introducido algo fuera del rango establecido.")
-	fin_segun
-
-fin_procedimiento
-//Comienzo del algoritmo (Obligatorio)
-principal	
-
-var
-	 entero: numero
-inicio 	
-         escribir("Introduzca un número entre 0 y 9 y le diré con
-         letras qué numero es:")
-	 leer(numero)
-	 dimeNumero(numero)
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsubsection{Paso por referencia}
-\begin{lstlisting}[language = pseudocodigoesp]
-// Algoritmo: Ejemplo de procedimiento con paso por referencia
-// Autor: Antonio Vélez Estévez
-// Fecha: 30/06/2016
-
- 
-Algoritmo ProcedimientosPasoReferencia01
-
-//Sección de definición de variables constantes
-const 
-//Sección de definición de tipos
-tipo
-//Sección de declaración de variables globales	
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-procedimiento intercambiar(E/S real: x, E/S real: z)
-var
-	real: aux
-inicio 
-	aux <- x
-	x <- z
-	z <- aux
-fin_procedimiento
-//Comienzo del algoritmo (Obligatorio)
-principal	
-
-var
-	real: numero1
-	real: numero2
-inicio 	
-	numero1 <- 5
-	numero2 <- 8
-	escribir("La variable numero1 tiene el valor: ", numero1)
-	escribir("La variable numero2 tiene el valor: ", numero2)
-	
-	escribir("Intercambiando...")
-	
-	intercambiar(numero1, numero2)
-	
-	escribir("La variable numero1 tiene el valor: ", numero1)
-	escribir("La variable numero2 tiene el valor: ", numero2)
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Registros}
-\begin{lstlisting}[language = pseudocodigoesp]
-// Algoritmo: Ejemplo de registro.
-// Autor: Antonio Vélez Estévez
-// Fecha: 01/07/2016
- 
-Algoritmo Registros01
-
-//Sección de definición de variables constantes
-const 
-//Sección de definición de tipos
-tipo
-	registro: Persona
-		cadena: nombre
-		cadena: apellido
-		entero: edad
-		entero: NIF
-	fin_registro
-//Sección de declaración de variables globales	
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-
-var
-	Persona: per
-inicio 	
-	escribir("Introduzca el nombre de la persona(máx. 30 caracteres):")
-	leer(per.nombre)
-	
-	escribir("Introduzca el apellido de la persona(máx. 30 caracteres):")
-	leer(per.apellido)
-	
-	escribir("Introduzca la edad de la persona:")
-	leer(per.edad)
-	
-	escribir("Introduzca el NIF de la persona:")
-	leer(per.NIF)
-	
-	escribir("Su persona es:")
-	escribir("Nombre: ", per.nombre)
-	escribir("Apellido: ", per.apellido)
-	escribir("Edad: ", per.edad)
-	escribir("NIF: ", per.NIF)
-	
-	
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Registros anidados}
-\begin{lstlisting}[language = pseudocodigoesp]
-/*
- * Algoritmo: Ejemplo de registros anidados.
- * Autor: Antonio Vélez Estévez
- * Fecha: 01/07/2016
- */
- 
-Algoritmo RegistrosAnidados01
-
-//Sección de definición de variables constantes
-const 
-//Sección de definición de tipos
-tipo
-	registro: Coche
-		cadena: marca
-		entero: numBastidor
-		cadena: matricula
-	fin_registro
-	
-	registro: Persona
-		cadena: nombre
-		cadena: apellido
-		entero: edad
-		entero: NIF
-		Coche: coche
-	fin_registro
-//Sección de declaración de variables globales	
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-
-var
-	Persona: per
-inicio 	
-	escribir("Introduzca el nombre de la persona(máx. 30 caracteres):")
-	leer(per.nombre)
-	
-	escribir("Introduzca el apellido de la persona(máx. 30 caracteres):")
-	leer(per.apellido)
-	
-	escribir("Introduzca la edad de la persona:")
-	leer(per.edad)
-	
-	escribir("Introduzca el NIF de la persona:")
-	leer(per.NIF)
-	
-	escribir("Introduzca la marca del coche de la persona:")
-	leer(per.coche.marca)
-	
-	escribir("Introduzca el número de bastidor del coche de la persona:")
-	leer(per.coche.numBastidor)
-	
-	escribir("Introduzca la matrícula del coche:")
-	leer(per.coche.matricula)
-	
-	escribir("Su persona es:")
-	escribir("Nombre: ", per.nombre)
-	escribir("Apellido: ", per.apellido)
-	escribir("Edad: ", per.edad)
-	escribir("NIF: ", per.NIF)
-	escribir("Además esta persona tiene un coche cuyos datos son:")
-	escribir("Marca: ", per.coche.marca)
-	escribir("Número de bastidor: ", per.coche.numBastidor)
-	escribir("Matrícula: ", per.coche.matricula)
-	
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Matrices}
-\begin{lstlisting}[language = pseudocodigoesp]
-/*
- * Algoritmo: Ejemplo de matrices. Comprueba si una matriz es la identidad.
- * Autor: Antonio Vélez Estévez
- * Fecha: 01/07/2016
- */
- 
-Algoritmo Matrices01
-
-//Sección de definición de variables constantes
-const 
-	MAX = 3
-//Sección de definición de tipos
-tipo
-	matriz [MAX][MAX] de entero: Matriz
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-
-var
-	Matriz : mat
-	entero : i
-	entero : j
-	logico : esIdentidad
-inicio 	
-        escribir("A continuacion introducira los elementos de la matriz para comprobar
-        si es identidad")
-	desde i <- 0 hasta MAX - 1 hacer
-		desde j <- 0 hasta MAX - 1 hacer
-			escribir("Introduzca el elemento ", i, ", ", j)
-			leer(mat[i][j])
-		fin_desde
-	fin_desde
-
-	esIdentidad <- verdadero
-	
-	i <- 0
-	mientras(i < MAX y esIdentidad) hacer
-		j <- 0
-		mientras(j < MAX y esIdentidad) hacer
-		        // Si estamos en la diagonal el elemento debe ser uno si no,
-                        // no será identidad.
-			si(i = j) entonces
-				si(mat[i][j] != 1) entonces
-					esIdentidad <- falso
-				fin_si
-			// Si no estamos en la diagonal el elemento debe ser cero si
-			// no, no será identidad.
-			si_no
-				si(mat[i][j] != 0) entonces
-					esIdentidad <- falso
-				fin_si
-			fin_si		
-			j <- j + 1
-		fin_mientras
-		i <- i + 1
-	fin_mientras
-	
-	si(esIdentidad = verdadero) entonces
-		escribir("La matriz introducida era la identidad.")
-	si_no
-		escribir("La matriz introducida no era la identidad.")
-	fin_si
-	
-fin_principal
-fin_algoritmo
-\end{lstlisting}
-\subsection{Vectores}
-  \begin{lstlisting}[language = pseudocodigoesp]
-/*
- * Algoritmo: Ejemplo de vectores.
- * Autor: Antonio Vélez Estévez
- * Fecha: 01/07/2016
- */
- 
-Algoritmo Vectores01
-
-//Sección de definición de variables constantes
-const 
-	MAX = 10
-//Sección de definición de tipos
-tipo
-	vector [MAX] de entero: Vector
-var
-
-//Sección de definición de subalgoritmos: funciones y procedimientos	
-
-//Comienzo del algoritmo (Obligatorio)
-principal	
-
-var
-	Vector : numeros
-	entero : i
-	real   : suma
-	real   : media
-inicio 	
-        escribir("A continuación ingresará una serie de numeros para calcular la
-        media y la suma de los mismos")
-	desde i <- 0 hasta MAX - 1 hacer
-		escribir("Ingrese el elemento ", i)
-		leer(numeros[i])
-		suma <- suma + numeros[i]
-	fin_desde
-	
-	media <- suma div MAX
-	
-	escribir("La media del vector introducido es: ", media)
-	escribir("La suma del vector introducido es:", suma)
-	
-fin_principal
-fin_algoritmo
-  \end{lstlisting}
+  \subsection{Registros anidados}
+  \subsection{Matrices}
+  \subsection{Vectores}
 \end{appendices}
 \end{document}
 
