Ajustando los ejemplos para que no se salgan del PDF

--- a/Español/main.tex
+++ b/Español/main.tex
@@ -517,24 +517,36 @@ Luego se usa dicho tipo como un tipo normal y corriente. Lo único especial que 
   \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Repetitiva/EstructurasRepetitiva03.p"}
 
   \subsection{Funciones}
-  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Control/Repetitiva/EstructurasRepetitiva03.p"}
+    
   \subsubsection{Paso por valor}
 
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Funciones/FuncionesPasoValor01.p"}
 
   \subsubsection{Paso por referencia}
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Funciones/FuncionesPasoReferencia01.p"}
+
   \subsection{Procedimientos}
   \subsubsection{Paso por valor}
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Procedimientos/ProcedimientosPasoValor01.p"}
 
   \subsubsection{Paso por referencia}
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Procedimientos/ProcedimientosPasoReferencia01.p"}
 
 
 
   \subsection{Registros}
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Datos/Registros/Registros01.p"}
 
 
   \subsection{Registros anidados}
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Datos/RegistrosAnidados/RegistrosAnidados01.p"}
+
   \subsection{Matrices}
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Datos/Matriz/Matrices01.p"}
+
   \subsection{Vectores}
+  \lstinputlisting[language = pseudocodigoesp]{"codigosejemplo/Estructuras de Datos/Vectores/Vectores01.p"}
+
 \end{appendices}
 \end{document}
 
