Corrigiendo la sección tipos, que era tipo, en la estructura general del pseudocódigo

--- a/Español/main.tex
+++ b/Español/main.tex
@@ -58,7 +58,7 @@ La estructura general de un algoritmo en pseudocódigo es la siguiente:
 Algoritmo nombreAlgoritmo
     const
         //sección de definición de constantes.
-    tipos
+    tipo
         //sección de definición de tipos.
     var
         //sección de definición de variables globales.
@@ -110,7 +110,7 @@ Para declarar una variable de tipo carácter en pseudocódigo usaremos la palabr
 
 \subsection{Estructurados}
 
-Los tipos de datos estructurados se definirán en la sección de definición de tipos, que está encabezada por la palabra reservada \pkeyword{tipos}.
+Los tipos de datos estructurados se definirán en la sección de definición de tipos, que está encabezada por la palabra reservada \pkeyword{tipo}.
 
 \subsubsection{Vectores}
 
